# arrow

./: CMakeLists.txt
data/heightfields/: data.hf  data10.hf
data/scenes/prog01/: creative_assign1.scn  creative_assign2.scn  prog01.scn  torus.scn
data/scenes/prog02/: prog02.scn  prog02_temp.scn
data/scenes/prog03/: prog03.scn  prog03creative.scn  prog03extra.scn
data/scenes/prog04/: prog04.scn  prog04_creative.scn
data/scenes/prog05/: creative_assign2.scn  prog05.scn  prog05_creative1.scn  prog05_creative2.scn  prog05_creative3.scn  prog05_creative4.scn  prog05_creative5.scn  prog05_creative6.scn  prog05_extra1.scn  prog05_extra2.scn  prog05_extra3.scn  prog05_extra4.scn  prog05_extra5.scn  prog05_temp1.scn  prog05_temp2.scn  prog05_temp3.scn  prog05_temp4.scn  prog05_temp5.scn  prog05_temp6.scn  prog05_temp_not_wrking.scn
data/scenes/test/: test.scn  test_1.scn  test_2.scn
data/textures/: EarthMap.ppm  land_lights_1024.ppm  land_ocean_ice_cloud_1024.ppm
src/: CMakeLists.txt  main.cc
src/backgrounds/: CMakeLists.txt  ConstantBackground.h
src/cameras/: CMakeLists.txt  PinholeCamera.cc  PinholeCamera.h
src/filters/: BoxFilter.cc  BoxFilter.h  CMakeLists.txt  Filter.cc  Filter.h  GaussianFilter.cc  GaussianFilter.h  MitchellFilter.cc  MitchellFilter.h  TriangleFilter.cc  TriangleFilter.h  WindowedSincFilter.cc  WindowedSincFilter.h
src/lights/: CMakeLists.txt  PointLight.h
src/mapping/: CMakeLists.txt  Mapping.cc  Mapping.h  PlanarMapping.cc  PlanarMapping.h  SphericalMapping.cc  SphericalMapping.h
src/materials/: CMakeLists.txt  CheckerMaterial.cc  CheckerMaterial.h  CoupledMaterial.cc  CoupledMaterial.h  DielectricMaterial.cc  DielectricMaterial.h  InvisibleMaterial.cc  InvisibleMaterial.h  LambertianMaterial.cc  LambertianMaterial.h  Material.cc  Material.h  MetalMaterial.cc  MetalMaterial.h  OrenNayarMaterial.cc  OrenNayarMaterial.h  PhongDielectricImage.cc  PhongDielectricImage.h  PhongImageMaterial.cc  PhongImageMaterial.h  PhongMarble.cc  PhongMarble.h  PhongMaterial.cc  PhongMaterial.h  TestFunctionMaterial.cc  TestFunctionMaterial.h  TileMaterial.cc  TileMaterial.h
src/objects/: BoundingBox.h  CMakeLists.txt  Instance.cc  Instance.h  Object.cc  Object.h
src/objects/primitives/: Box.cc  Box.h  CMakeLists.txt  Cone.cc  Cone.h  Cylinder.cc  Cylinder.h  Heightfield.cc  Heightfield.h  Plane.cc  Plane.h  Primitive.cc  Primitive.h  Rectangle.cc  Rectangle.h  Sphere.cc  Sphere.h  SpherePolar.cc  SpherePolar.h  Torus.cc  Torus.h  disk.cc  disk.h  ring.cc  ring.h  triangle.cc  triangle.h
src/rtengine/: CMakeLists.txt  Ray.h  Scene.cc  Scene.h
src/rtengine/world/: CheckersBoard.h
src/sampler/: CMakeLists.txt  HammersleySampler.cc  HammersleySampler.h  JitteredSampler.cc  JitteredSampler.h  MultiJitteredSampler.cc  MultiJitteredSampler.h  NRooksSampler.cc  NRooksSampler.h  Sampler.cc  Sampler.h  TestFunctionMaterial.cc  UniformSampler.cc  UniformSampler.h
src/utils/: CMakeLists.txt  Color.h  Image.cc  Image.h  Math.h  Parser.cc  Parser.h  PerlinNoise.cc  PerlinNoise.h  Point.h  Time.cc  Vector.cc  Vector.h
src/world/: World.h
